--- a/styles.css
+++ b/styles.css
@@ -42,18 +42,18 @@ nav a {
     bottom: 90px;
     right: 10px;
     z-index: 99;
-    border:2px solid #4e3634;
+    border: 2px solid #4e3634;
     color: #4e3634;
     padding-top: 10px 10px 0 10px;
     cursor: pointer;
     border-radius: 10px;
     font-size: 20px;
     opacity: 0.7;
-  }
-  
+}
+
 #myBtn:hover {
     background-color: #f5eeee;
-  }
+}
 
 .coffee-images img {
     width: 19.3%;
@@ -65,4 +65,15 @@ nav a {
 .home-text {
     text-align: justify;
     padding: 50px;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
