--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,34 @@ nav a {
     padding: 50px;
 }
 
+.background-img {
+    width: 100%;
+    height: 200px;
+    opacity: 0.8;
+}
+
+ul {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+
+
 footer {
     background-color: #333;
     color: #fff;
@@ -76,4 +104,11 @@ footer {
     bottom: 0;
     right: 0;
     left: 0;
+}
+
+@media screen and (max-width: 760px) {
+    nav {
+        display: none;
+        padding: 2rem;
+    }
 }
