--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,12 @@ header h1 {
     margin: 0;
 }
 
+h2 {
+    text-align: center;
+    font-size: 40px;
+    text-shadow: 2px 2px 4px #797676;
+}
+
 nav ul {
     list-style: none;
     padding: 0;
